--- a/style-page-four.css
+++ b/style-page-four.css
@@ -1,9 +1,31 @@
-@media screen and (min-width: 915px) {
-  .publication-body {
+@media screen and (min-width: 1300px) {
+  .sections {
+    display: grid;
+    grid-template-rows: 0.8fr 1fr 0.5fr 0.5fr 0.5fr;
+    grid-template-columns: 1fr 1fr;
+    justify-items: center;
+  }
 
+  .section {
+    margin-left: 20px;
+    max-width: 565px;
+  }
+
+  #sec-9 {
+    grid-area: 5 / 1 / 6 / 3;
   }
 
 
+}
+
+@media screen and (min-width: 915px) and (max-width: 1300px) {
+  .section {
+    max-width: 720px;
+  }
+
+  #sec-1 {
+    margin-top: 15px;
+  }
 }
 
 @media screen and (max-width: 915px) {
@@ -13,6 +35,14 @@
 
   .sections {
     margin-right: 25px;
+  }
+
+  .section {
+    max-width: 720px;
+  }
+
+  #sec-1 {
+    margin-top: 15px;
   }
 }
 
@@ -96,76 +126,40 @@ img {
   margin-bottom: 40px;
 }
 
-form {
+.sections {
+
+}
+
+.section {
   width: 100%;
-  max-width: 800px;
-  align-self: center;
-}
-
-fieldset {
-  border: #ffffff;
-  border-radius: 7px;
-  box-shadow: #564D4A 0px 2px 8px 0px;
-  background-color: #ffffff;
-  max-width: 850px;
-  align-self: center;
-  padding-left: 20px;
-  padding-bottom: 15px;
-  padding-top: 15px;
-}
-
-#survey-blurb {
-  width: 100%;
-  max-width: 800px;
-}
-
-.fields {
+  height: auto;
+  margin-top: 30px;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+  border-radius: 5px;
+  padding: 20px;
+  background-color: white;
+  color:#564D4A;
   display: flex;
   flex-direction: column;
+
 }
 
-.field {
-  width: 100%;
-  height: fit-content;
-  margin-top: 5px;
-  margin-bottom: 5px;
+#sec-9 {
+  margin-bottom: 30px;
 }
 
-.desc {
+.subheading {
+  margin: 0;
   font-weight: bold;
 }
 
-.radio-buttons {
-  margin-right: 50px;
+.content {
+  margin-top: 7px;
+  margin-bottom: 0;
+  text-indent: 20px;
 }
 
-.comments {
-  margin-top: 15px;
-}
-
-#comments {
-  margin-top: 5px;
-  max-width: 550px;
-  width: 100%;
-  height: 50px;
-}
-
-.submit {
-  padding-top: 40px;
-  padding-bottom: 15px;
+.section-photo {
   align-self: center;
-}
-
-#button {
-  width: 200px;
-  font-family: inherit;
-  font-size: 18px;
-  padding-top: 3px;
-  padding-bottom: 3px;
-  box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
-  border: #ffffff;
-}
-
-#button:hover {
-  background-color: #e0e0e0;
+  margin-bottom: 15px;
 }
