--- a/style-page-one.css
+++ b/style-page-one.css
@@ -1,8 +1,4 @@
-@media screen and (min-width: 800px; max-width: 925px) and (max-width: 925px) {
-
-}
-
-@media screen and (min-width: 800px) {
+@media screen and (min-width: 950px) {
   body {
   }
 
@@ -70,7 +66,7 @@
   }
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 950px) {
   body {
     max-width: 100%;
   }
@@ -152,16 +148,8 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-}
-
-img {
-  max-width: 100%;
-  height: auto;
-}
-
-.cover-story {
-  max-width: 1083px;
-  height: auto;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 a.navigation-elements {
@@ -171,6 +159,17 @@ a.navigation-elements {
 a {
   color: #BA1B1D;
   text-decoration: none;
+}
+
+
+h1 {
+  font-size: 65px;
+}
+
+h3 {
+  font-size: 30px;
+  margin-top: 0;
+  margin-bottom: 10px;
 }
 
 h4 {
@@ -183,15 +182,16 @@ h6 {
   color: #564D4A;
 }
 
-ol {
-  margin: 0;
+img {
+  max-width: 100%;
+  height: auto;
 }
 
 .navigation-bar {
   display: flex;
   justify-content: space-between;
-  padding-left: 15px;
-  padding-right: 15px;
+  padding-left: 20px;
+  padding-right: 20px;
   border-bottom: 1px solid lightblue;
   background-color: #F24333;
   width: 100%;
@@ -222,6 +222,10 @@ h1 {
 
 .cover-story {
   display: flex;
+}
+
+.cover-photo {
+  max-width: 625px;
 }
 
 .article-one-tease {
