--- a/style-page-three.css
+++ b/style-page-three.css
@@ -1,20 +1,18 @@
-@media screen and (min-width: 800px) {
+@media screen and (min-width: 915px) {
   .publication-body {
 
   }
 
-  fieldset {
-    padding-right: 20px;
-  }
+
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 915px) {
   .publication-body {
 
   }
 
-  fieldset {
-
+  .sections {
+    margin-right: 25px;
   }
 }
 
@@ -111,7 +109,7 @@ img {
 
 .section {
   width: 100%;
-  max-width: 820px;
+  max-width: 810px;
   margin-top: 30px;
   box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
   border-radius: 5px;
